# 3DMMForever

./: .gitignore  CMakeLists.txt  CMakePresets.json  MAKEFILE  README.md  build.ps1  stub.cpp  vcpkg_rf.txt
ELIB/WINS/: BREN.LIB
INC/: ACTOR.H  BROWSER.H  PORTF.H
SRC/ENGINE/: CMakeLists.txt  MAKEFILE  MSND.CPP  SCENE.CPP  SREC.CPP
SRC/HELP/: HELP.CHT
SRC/STUDIO/: BROWSER.CPP  CMakeLists.txt  CreateConsole.cpp  CreateConsole.h  MAKEFILE  MMINSTAL.CPP  PORTF.CPP  TBPROJ2.CHT  TBPROJ4.CHT  UTEST.CPP
TOOLS/: MAKEFILE
bren/: bwld.cpp  tmap.cpp
bren/inc/: bwld.h  tmap.h
cd12/SRC/ENGINE/: MAKEFILE
cd12/SRC/STUDIO/: MAKEFILE
cd12/TOOLS/: MAKEFILE
inc/: utest.h
kauai/: MAKEFILE.DEF
kauai/ELIB/WINS/: audios.lib.dump  audios.lib.dumpall
kauai/SRC/: APPB.CPP  APPBWIN.CPP  CHUNK.CPP  CMakeLists.txt  DEBUG.H  DLGWIN.CPP  GFXWIN.CPP  KCD2_386.H  KCDC_386.H  MIDIDEV.CPP  STUB.C  UTIL.H  UTILCOPY.CPP  UTILCOPY.H  UTILINT.CPP  UTILMEM.H  UTILRND.CPP  UTILSTR.CPP  UTILSTR.H
kauai/STUB/: CMakeLists.txt  STUB.C
kauai/src/: appb.cpp  appb.h  appbwin.cpp  debugwindow.cpp  debugwindow.h  ft.cpp  gfx.cpp  gfx.h  gfxwin.cpp  kidspace.cpp  screxeg.cpp  util.h
src/engine/: bkgd.cpp  modl.cpp  mtrl.cpp  scene.cpp
src/shared/: util.cht
src/studio/: mminstal.cpp  portf.cpp  utest.cpp
